# fcc-physics-events

./: .dockerignore  .gitignore  .htaccess  Delphesevents_cms.php  Delphesevents_dev_IDEA.php  Delphesevents_fcc_v01.php  Delphesevents_fcc_v01.txt  Delphesevents_fcc_v02.php  Delphesevents_fcc_v02_ATLASgran.php  Delphesevents_fcc_v03.php  Delphesevents_fccee_tmp.php  Delphesevents_fccee_tmp_training.php  Delphesevents_fccee_tmp_v02.php  Delphesevents_fccee_tmp_v03.php  Delphesevents_fccee_v01.php  Delphesevents_fccee_v02.php  Delphesevents_helhc_v01.php  Delphesevents_pre_fall2022_training_IDEA.php  Delphesevents_spring2021_IDEA.php  Delphesevents_spring2021_IDEA_3T.php  Delphesevents_spring2021_IDEA_FullSilicon.php  Delphesevents_spring2021_training_IDEA.php  FCCSim_v01.txt  FCCsim_v01.php  FCCsim_v01.txt  FCCsim_v02_pre.php  FCCsim_v03.php  FCCsim_v03_ecal.php  LHEevents.php  LHEevents_FCCee.php  LHEevents_helhc.php  LICENSE  NOTICE  README.md  STDHEPevents_FCCee.php  config.php  config_example.ini  docker-compose-prod.yml  docker-compose.yml  elements.css  (+26 more)
FCCee/: LHEevents.php  STDHEPevents.php  index.php  page.php  topbar.php
FCChh/: Delphesevents_fcc_v02.php  Delphesevents_fcc_v03.php  Delphesevents_fcc_v04.php  FCCsim_v03.php  FCCsim_v03_ecal.php  FCCsim_v04.php  LHEevents.php  index.php  index_fcchh.php  page.php  topbar.php  topbar_fcchh.php
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/app/: app_config.py  auth.py  config.conf  config.py  fcc_dict_parser.py  gclql_query_parser.py  logging.py  main.py  main_backup.py  main_clean.py  schema_discovery.py
backend/app/database/: add-more-detectors.py  connection.py  fcc-physics-samples.sql  populate_db.py  schemas.py
backend/app/db/: add-more-detectors.py  database.py  fcc-physics-events.sql  fcc-physics-samples.sql  populate_db.py  schemas.py  test.sql
backend/app/models/: accelerator.py  campaign.py  dataset.py  detector.py  dropdown.py  framework.py  generic.py  process.py  software_stack.py  stage.py
backend/app/routers/: api.py  auth.py  entities.py  navigation.py  refresh.py  utility.py
backend/app/services/: __init__.py  file_watcher.py
backend/app/storage/: database.py  database.sql  drop-tables.sql  upload.sh
backend/app/utils/: __init__.py  config.py  errors.py  logging.py
backend/storage/: storage.py
data/: .gitignore  Delphesevents_cms.txt  Delphesevents_fcc_v02.txt  Delphesevents_helhc_v01.txt  FCCsim_v01.txt  FCCsim_v02_pre.txt  FCCsim_v03.txt  FCCsim_v03_ecal.txt  FCCsim_v03_newECalSegmentation.txt  FCCsim_v04.txt  LHEevents.txt  LHEevents_helhc.txt  fcc_ee_augments.json  statdelphesfcc_v02_FCC.html  statdelphesfcc_v03_FCC.html  statdelpheshelhc_v01_HELHC.html  statlhe_FCC.html  statsimu_FCC.html
fcc-ee/: index.php  page.php
fcc-hh/: Delphesevents_fcc_v02.php  Delphesevents_fcc_v03.php  Delphesevents_fcc_v04.php  Delphesevents_fcc_v05_scenarioI.php  Delphesevents_fcc_v05_scenarioII.php  FCCsim_v03.php  FCCsim_v03_ecal.php  FCCsim_v04.php  LHEevents.php  index.php  page.php
frontend/: Dockerfile  (+10 more)
(+301 files in other folders)
