[project]
name = "app"
version = "0.1.0"
description = ""
requires-python = ">=3.10,<4.0"
dependencies = [
    "fastapi[standard]<1.0.0,>=0.114.2",
    "tenacity<9.0.0,>=8.2.3",
    "pydantic>2.0",
    "asyncpg<1.0,>=0.30,",
    "lark>=1.2.2",
    "structlog>=25.4.0",
    "pyhocon>=0.3.61",
    "fastapi-oidc>=0.0.10",
    "authlib>=1.6.0",
    "httpx>=0.28.1",
    "starlette>=0.38.6",
    "itsdangerous>=2.2.0",
    "pyjwt[crypto]>=2.9.0",
    "cryptography>=42.0.0",
    "aiohttp>=3.12.15",
    "inflect>=7.0.0",
]

[tool.uv]
dev-dependencies = [
    "pytest<8.0.0,>=7.4.3",
    "mypy<2.0.0,>=1.8.0",
    "ruff<1.0.0,>=0.2.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.mypy]
strict = true
exclude = ["venv", ".venv"]

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG001", # unused arguments in functions
]
ignore = [
    "E501", # line too long, handled by formatter
    "B008", # do not perform function calls in argument defaults
    "W191", # indentation contains tabs
    "B904", # Allow raising exceptions without from e, for HTTPException
]

[tool.ruff.lint.pyupgrade]
# Preserve types, even if a file imports `from __future__ import annotations`.
keep-runtime-typing = true

[[tool.mypy.overrides]]
module = ["asyncpg.*", "pyhocon.*", "authlib.*"]
ignore_missing_imports = true
